signin/signup and homeView

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,19 @@
 {
     "cSpell.words": [
+        "authentificated",
         "chaque",
         "élément",
+        "ETUDIANT",
+        "Fichier",
+        "filieres",
+        "incorrectes",
+        "invalides",
         "Largeur",
-        "maximale"
+        "libelle",
+        "MATIERES",
+        "maximale",
+        "sauvegarder",
+        "SIGNIN",
+        "SIGNUP"
     ]
 }
